feat: working features to allow stub gens to work

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "rust-analyzer.cargo.features": [
-        "py-bevy",
-        "testing",
-        "py-ref"
+        // "py-bevy",
+        // "testing",
+        // "py-ref"
+        "minimal-pyo3",
+        "bevy"
     ]
 }
