--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,15 +27,30 @@ edition = "2021"
 
 [workspace.dependencies]
 bevy = "~0.17"
-pyo3 = { version = "~0.27", features = ["multiple-pymethods"] }
+pyo3 = { version = "~0.27" }
 pyo3-stub-gen = { version = "~0.18", default-features = false }
 
 [features]
-py-bevy = ["dep:pyo3", "dep:bevy", "simple_py_bevy_derive/py-bevy"]
-py-ref = ["dep:pyo3", "simple_py_bevy_derive/py-ref"]
+# absolute minimum pyo3 support. useful for only generating stubs
+minimal-pyo3 = ["dep:pyo3", "simple_py_bevy_derive/minimal-pyo3"]
+# generate bevy macros without pyo3
+bevy = ["dep:bevy"]
+# generates python exposed references to bevy owned data
+py-bevy = [
+    "minimal-pyo3",
+    "bevy",
+    "simple_py_bevy_derive/py-bevy",
+    # "pyo3/multiple-pymethods",
+]
+# generates structs that reference rust owned data
+py-ref = [
+    "minimal-pyo3",
+    "simple_py_bevy_derive/py-ref",
+    # "pyo3/multiple-pymethods",
+]
 testing = [
     "dep:pyo3",
-    "dep:bevy",
+    "bevy",
     "dep:pyo3-stub-gen",
     "simple_py_bevy_derive/py-bevy",
     "simple_py_bevy_derive/py-ref",
